--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h2>I'm a web developer</h2>
     <hr />
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img src="../Movie-ranking-project.jpg" width="400"/>
+        <img src="./Images/Movie-ranking.png" width="400"/>
 
         <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-        <img src="../birthday-invite.jpg" width="400"/>
+        <img src="./Images/birthday-invite.png" width="400"/>
     <hr />
     <p>
         <a href="./public/about.html">About me</a>
